# python_software_engineering

./: README.md
data_structures_educative/: .gitignore  README.md
data_structures_educative/01_Data_Structures/: Data_Structures.md
data_structures_udemy/: .gitignore  Python_DSAlgo_Guide.md  README.md  test_template.py
data_structures_udemy/Algorithm Analysis and Big O/: Algorithm Analysis and Big O Quiz.ipynb  Big O Examples .ipynb  Big O Notation.ipynb  Big O for Python Data Structures.ipynb
data_structures_udemy/Array Sequences/: Dynamic Array Exercise.ipynb
data_structures_udemy/Linked Lists/: Doubly Linked List Implementation.ipynb  Singly Linked List Implementation.ipynb
data_structures_udemy/Practice/: Codiliy_Tests_2022_11_10.ipynb  Reflect Notes.ipynb
data_structures_udemy/Recursion/: Introduction to Recursion.ipynb  Memoization.ipynb  Recursion Homework Example Problems - SOLUTIONS.ipynb
data_structures_udemy/Stacks, Queues and Deques/: Deques Overview.ipynb  Implementation of Deque.ipynb  Implementation of Queue.ipynb  Implementation of Stack.ipynb  Queues Overview.ipynb  Stacks Overview.ipynb
data_structures_udemy/Trees/: Binary Heap Implementation.ipynb  Binary Search Trees.ipynb  (+2 more)
design_patterns_udemy/: .gitignore  CMakeLists.txt  DesignPatterns_01_SOLID.md  DesignPatterns_02_Creational.md  DesignPatterns_03_Structural.md  DesignPatterns_04_Behavioral.md  README.md
design_patterns_udemy/01_SOLID/: .gitignore  CMakeLists.txt  DIP.cpp  ISP.cpp  LSP.cpp  OCP.cpp  README.md  SOLID_Principles.ipynb  SRP.cpp  isp.py  lsp.py  ocp.py  srp.py
(+28 files in other folders)
